# Generated by Django 5.0.7 on 2024-08-23 11:51

import datetime
import django.db.models.deletion
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):
    initial = True

    dependencies = [
        ("base", "__first__"),
        ("products", "0001_initial"),
    ]

    operations = [
        migrations.CreateModel(
            name="note",
            fields=[
                ("created_at", models.DateTimeField(default=datetime.datetime.now)),
                ("created_by", models.IntegerField(default=1)),
                ("last_updated_at", models.DateTimeField(null=True)),
                ("last_updated_by", models.IntegerField(null=True)),
                ("pid", models.BigAutoField(primary_key=True, serialize=False)),
                ("note", models.TextField()),
            ],
            options={
                "db_table": "note",
                "abstract": False,
            },
        ),
        migrations.CreateModel(
            name="terms_conditions",
            fields=[
                ("created_at", models.DateTimeField(default=datetime.datetime.now)),
                ("created_by", models.IntegerField(default=1)),
                ("last_updated_at", models.DateTimeField(null=True)),
                ("last_updated_by", models.IntegerField(null=True)),
                ("pid", models.BigAutoField(primary_key=True, serialize=False)),
                ("terms", models.TextField()),
            ],
            options={
                "db_table": "terms_and_conditions",
                "abstract": False,
            },
        ),
        migrations.CreateModel(
            name="invoice",
            fields=[
                ("created_at", models.DateTimeField(default=datetime.datetime.now)),
                ("created_by", models.IntegerField(default=1)),
                ("last_updated_at", models.DateTimeField(null=True)),
                ("last_updated_by", models.IntegerField(null=True)),
                ("pid", models.BigAutoField(primary_key=True, serialize=False)),
                ("uuid", models.UUIDField(default=uuid.uuid4, editable=False)),
                (
                    "description",
                    models.TextField(
                        default="Invoice 2024-08-23 to Alex", max_length=40
                    ),
                ),
                ("due_date", models.DateField(null=True)),
                (
                    "total",
                    models.DecimalField(
                        blank=True,
                        decimal_places=2,
                        default=0.0,
                        max_digits=10,
                        null=True,
                    ),
                ),
                ("paid", models.BooleanField(default=False)),
                (
                    "company_id",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE, to="base.company"
                    ),
                ),
                (
                    "note",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE, to="invoicing.note"
                    ),
                ),
                (
                    "terms_conditions",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="invoicing.terms_conditions",
                    ),
                ),
            ],
            options={
                "db_table": "invoice",
                "abstract": False,
            },
        ),
        migrations.CreateModel(
            name="invoice_product_link",
            fields=[
                ("pid", models.BigAutoField(primary_key=True, serialize=False)),
                (
                    "quantity",
                    models.DecimalField(decimal_places=3, default=0.0, max_digits=10),
                ),
                (
                    "price",
                    models.DecimalField(decimal_places=3, default=0.0, max_digits=10),
                ),
                (
                    "invoice_id",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="invoicing.invoice",
                    ),
                ),
                (
                    "product_id",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="products.product",
                    ),
                ),
            ],
            options={
                "db_table": "invoice_product_link",
            },
        ),
    ]
